# chroma

./: CONTRIBUTING.md  README.md
.github/workflows/: push.yml  release.yml
app/: app.vue  nuxt.config.ts  package.json  pnpm-lock.yaml
app/api/: net.ts
app/assets/css/: style.css
app/components/album/: info.vue  page.vue  photo-grid.vue  selection-toolbar.vue
app/components/modal/: delete-album.vue  new-album.vue  upload.vue
app/components/modal/ui/: upload-item.vue
app/components/photo/: page.vue
app/components/photo/ui/: preview.vue
app/components/ui/: checkbox.vue  drop-zone.vue  input.vue  modal.vue  switch.vue
app/composables/: useAuth.ts  useModels.ts
app/layouts/: default.vue
app/pages/: index.vue
app/pages/album/[album]/: [[photo]].vue
app/proto/entity/: album.ts  photo.ts  user.ts
app/proto/payload/v2/: access.ts  login.ts
app/proto/payload/v2/albums/: list.ts
app/proto/payload/v2/photos/: batchDelete.ts  create.ts  delete.ts  get.ts  list.ts  search.ts
app/proto/payload/v2/user/: available_scopes.ts  get.ts  list.ts  update.ts
app/server/middleware/: 00.log.ts  01.auth.ts
app/server/routes/auth/: handle_login.get.ts
app/server/utils/: net.ts  session.ts
app/utils/: net.ts
colorizer/: Cargo.toml  README.md
colorizer/src/: args.rs  chroma.rs  main.rs  pxl.rs  pxl_metadata.rs  s3.rs
docs/: book.toml
docs/src/: SUMMARY.md  installation.md  introduction.md
docs/src/devguide/: SUMMARY.md  backend.md  frontend.md
docs/src/devguide/backend/: SUMMARY.md  running_locally.md
frontend/: .gitignore  app.vue  nuxt.config.ts  package-lock.json  package.json  pnpm-lock.yaml
frontend/components/: .uuid  modal.vue  the-header.vue
frontend/components/album/: header.vue  photo-grid.vue  upload-modal.vue
frontend/components/header/: search-bar.vue  user-menu.vue
frontend/components/photo/: preview.vue
frontend/composables/: .uuid  useAuth.ts  useEditing.ts
frontend/layouts/: .uuid  default.vue
frontend/middleware/: .uuid  checkLogin.global.ts
frontend/models/: .uuid  album.ts  photo.ts
frontend/pages/: .uuid  index.vue
frontend/pages/album/: [album].vue  new.vue
frontend/pages/album/[album]/: [[photo]].vue  index.vue
frontend/pages/album/[album]/photo/: [photo].vue
frontend/proto/: .uuid
frontend/proto/entity/: user.ts
frontend/proto/payload/v1/: access.ts  login.ts
frontend/proto/payload/v1/album/: create.ts  delete.ts  update.ts
frontend/proto/payload/v1/photo/: create.ts  delete.ts  list.ts
frontend/proto/payload/v1/user/: available_scopes.ts  get.ts  list.ts  update.ts
frontend/public/: .uuid
frontend/server/: .uuid
frontend/server/routes/auth/: handle_login.get.ts
frontend/src/: App.vue  api.ts  http.ts  main.ts  server.ts
frontend/src/components/: AlbumCover.vue  EditUserDialog.vue  GrantScopeDialog.vue  PhotoCover.vue  PhotoGrid.vue  ReturnButton.vue  UploadPhotoDialog.vue
frontend/src/plugins/: vuetify.ts
frontend/src/router/: index.ts
frontend/src/views/: LoggedIn.vue
frontend/src/views/album/: AlbumCreateView.vue  AlbumDetailView.vue  AlbumEditView.vue  AlbumGridView.vue  album.ts
frontend/src/views/photo/: PhotoDetailView.vue  PhotoGridView.vue  photo.ts
frontend/src/views/user/: UserListView.vue  user.ts
frontend/utils/: .uuid  request.ts  retrieve.ts  send.ts  validateSession.ts
server/: .gitignore  Cargo.toml  Dockerfile  albums.http  docker-compose.yml  photos.http  sample.env
server/chroma/: Cargo.toml
server/chroma/src/: app.rs  config.rs  exit.rs  main.rs  server.rs
server/chroma/src/koala/: mod.rs
server/chroma/src/routes/: appdata.rs  authorization.rs  empty.rs  error.rs  mod.rs  redirect.rs  routable.rs
server/chroma/src/routes/v1/: access.rs  login.rs  mod.rs
server/chroma/src/routes/v1/album/: create.rs  delete.rs  get.rs  list.rs  mod.rs  update.rs
server/chroma/src/routes/v1/albums/: create.rs  mod.rs
server/chroma/src/routes/v1/photo/: create.rs  delete.rs  get.rs  list.rs  mod.rs  random.rs  report_broken.rs
server/chroma/src/routes/v1/token/: mod.rs
server/chroma/src/routes/v1/user/: available_scopes.rs  get.rs  list.rs  mod.rs  update.rs
server/chroma/src/routes/v2/: available_scopes.rs  login.rs  mod.rs
server/chroma/src/routes/v2/albums/: create.rs  delete.rs  get.rs  list.rs  mod.rs  update.rs
server/chroma/src/routes/v2/photos/: batch_delete.rs  batch_get.rs  create.rs  delete.rs  get.rs  mod.rs  search.rs
server/chroma/src/routes/v2/photos/jobs/: mod.rs
server/chroma/src/routes/v2/user/: get.rs  mod.rs
server/dal/: Cargo.toml  build.rs
server/dal/migrations/: 1_initial.sql  2_chroma_scopes.sql  3_draft_albums.sql  4_image_conversion_status.sql  5_album_fk.sql  6_rename_photo_metadata_index.sql  6_service_tokens_v2.sql  7_photo_resolution_and_exif.sql  7_save_s3_urls.sql  8_photo_and_album_tables_rework.sql  8_rename_user_tables.sql  V1__initial.sql  V2__chroma_scopes.sql  V3__draft_albums.sql
server/dal/src/: lib.rs  s3.rs  storage_engine.rs
server/dal/src/database/: album.rs  mod.rs  photo.rs  photo_album.rs  photo_exif.rs  photo_url.rs  service_token_user.rs  user.rs
server/dal/src/database/user/: standard_user.rs  token_user.rs
server/proto/: Cargo.toml  build.rs
server/proto/protos/entity/: album.proto  photo.proto  user.proto  user_scope.proto
server/proto/protos/payload/v1/: access.proto  login.proto
server/proto/protos/payload/v1/album/: create.proto  delete.proto  get.proto  list.proto  update.proto
server/proto/src/: lib.rs
(+20 files in other folders)
