[package]
name = "colorizer"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.2"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
proto = { path = "../server/proto" }
reqwest = { version = "0.11.18", default-features = false, features = ["rustls-tls", "json"] }
tokio = { version = "1.29.1", features = ["full"] }
clap = { version = "4.3.19", features = ["derive", "env"] }
thiserror = "1.0.44"
reqwest-protobuf = "0.1.0"
serde = { version = "1.0.176", features = ["derive"] }
serde_json = "1.0.104"
uuid = "1.4.1"
lazy_static = "1.4.0"
regex = "1.9.6"
chrono = "0.4.31"
term = "0.7.0"