[package]
name = "chroma"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.6.4"
actix-multiresponse = "0.4.2"
actix-web = "4.3.0"
color-eyre = "0.6.2"
proto = { version = "0.1.0", path = "../proto" }
serde = { version = "1.0.152", features = ["derive"] }
thiserror = "1.0.38"
tracing = "0.1.37"
tokio = { version = "1.25.0", features = ["full"] }
tracing-actix-web = "0.7.2"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
dal = { version = "0.1.0", path = "../dal" }
envy = "0.4.2"
noiseless-tracing-actix-web = "0.1.0"