[package]
name = "chroma"
version = "0.1.11"
edition = "2021"

[dependencies]
actix-cors = "0.6.4"
actix-multiresponse = { version = "0.4.2", features = ["xml"]}
actix-web = "4.3.0"
actix-governor = "0.4.0"
color-eyre = "0.6.2"
proto = { version = "0.1.0", path = "../proto" }
serde = { version = "1.0.152", features = ["derive"] }
thiserror = "1.0.38"
tracing = "0.1.37"
tokio = { version = "1.29.1", features = ["full"] }
tracing-actix-web = "0.7.2"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
dal = { version = "0.1.0", path = "../dal" }
envy = "0.4.2"
noiseless-tracing-actix-web = "0.1.0"
futures = "0.3.26"
reqwest = { version = "0.11.14", default-features = false, features = ["json", "rustls-tls"] }
chrono = "0.4.23"
image = "0.24.5"
tap = "1.0.1"
webp = "0.2.5"
img-parts = "0.3.0"
time = "0.3.28"
kamadak-exif = "0.5.5"
cabbage = "0.1.2"

[dev-dependencies]
serde_json = "1.0.93"
