[package]
name = "dal"
version = "0.1.0"
edition = "2021"

[dependencies]
refinery = { version = "0.8.7", default-features = false, features = ["tokio-postgres"] }
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "postgres"] }
thiserror = "1.0.38"
aws-types = "0.54.1"
aws-credential-types = { version = "0.54.1", features = ["hardcoded-credentials"] }
aws-sdk-s3 = { default-features = false, version = "0.24.0", features = ["rustls"] }
aws-smithy-http = "0.54.3"
rand = "0.8.5"
time = "0.3.19"
proto = { version = "0.1.0", path = "../proto" }
tracing = "0.1.37"
strum = "0.24.1"
strum_macros = "0.24.3"
async-recursion = "1.0.4"