[package]
name = "dal"
version = "0.1.0"
edition = "2021"

[dependencies]
async-recursion = "1.0.4"
aws-credential-types = { version = "0.54.1", features = ["hardcoded-credentials"] }
aws-sdk-s3 = { default-features = false, version = "0.24.0", features = ["rustls"] }
aws-smithy-http = "0.54.3"
aws-types = "0.54.1"
proto = { version = "0.1.0", path = "../proto" }
rand = "0.8.5"
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "postgres", "migrate"] }
strum = "0.24.1"
strum_macros = "0.24.3"
thiserror = "1.0.38"
time = "0.3.19"
tokio = { version = "1.29.1", features = ["io-std", "fs"] }
tracing = "0.1.37"
futures = "0.3.30"